# multiPlayerGame

./: CMakeLists.txt  README.md
include/: config.h
include/common/: Phisics.cpp  Phisics.h  tiles.cpp  tiles.h
include/gameLayer/: Ui.h  packet.h  serverClient.h
include/platform/: platformInput.h
levelBuilder/src/: gameLayerBuilder.cpp
resources/: gameData.data  mapData.txt  mapData2.txt
src/gameLayer/: Ui.cpp  client.cpp  gameLayer.cpp  packet.cpp  server.cpp
src/platform/: glfwMain.cpp
